--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 
 <div class="header">
+    <br>
     <h1 style="font-size: 50px;
     color: white;">All Out Life</h1>
     <h3 style="font-size: 20px;
@@ -10,8 +11,8 @@
 ">Slipknot - We Are Not Your Kind</h3>
 </div>
 
-<body style="background-color: black;">
-    <div>
+<body style="background: url(fb00da1e3130d5bbf383fb585d362d4f.1000x1000x1.png) no-repeat center center; background-size: cover; background-color: black;">
+    <div class="text-container">
         <p>
         What a world, the horizon's <br>
         Coming like a hell-bent killing machine <br>
