image width update

--- a/exercises/using-images/index.html
+++ b/exercises/using-images/index.html
@@ -256,7 +256,7 @@
       
       <figure class="compressed-image">
         <!-- your <img> here... -->
-        <img src="images/styles.jpg" alt="compressed jpg">
+        <img src="images/styles.jpg" alt="compressed jpg" style="width:100%">
         <figcaption>1200 px wide, 25% jpeg compression, 112 KB</figcaption>
       </figure>
         
