--- a/multi-panel-page/index.html
+++ b/multi-panel-page/index.html
@@ -35,63 +35,68 @@
             <div>
                 <h2>Section Title</h2>
                 <div class="grid">
-                    <ul class="col2">
+                    <ul class="col">
                         <li>
-                            <ul class="col">
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                            </ul>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
                         </li>
                         <li>
-                            <ul class="col">
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                                <li>
-                                    <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
-                                </li>
-                                <li>
-                                    <h3>Photo Title</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
-                                </li>
-                            </ul>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
                         </li>
+                        <li>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
+                        </li>
+                        <li>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+                        </li>
+                        <li>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
+                        </li>
+                        <li>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+                        </li>
+                    </ul>
+                    <ul class="col">
+                        <li>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
+                        </li>
+                        <li>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+                        </li>
+                        <li>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
+                        </li>
+                        <li>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+                        </li>
+                        <li>
+                            <img class="gridphoto" src="pixel sunset.gif" alt="sunset">
+                        </li>
+                        <li>
+                            <h3>Photo Title</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+                        </li>
+                    </ul>
                 </div>
-                
-                
             </div>
         </section>
 
+        <section class="section4">
+            <div>
+                <h2>Section Title</h2>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod. Vivamus pulvinar posuere turpis congue laoreet. Suspendisse potenti. Sed fringilla, ex et dictum efficitur, augue nunc cursus elit, non lacinia diam ante et ipsum. Sed non commodo dolor. Sed vehicula aliquet nisl, sit amet convallis dolor posuere sed.</h4>
+            </div>
+        </section>
+
+        <footer>
+            <div>
+                <h5>@Copyright 2024</h5>
+            </div>
+        </footer>
 	</body>
 
 </html>
