--- a/microsite/mockups-b/index.html
+++ b/microsite/mockups-b/index.html
@@ -10,7 +10,7 @@
 
 <h1>Mockup B</h1>
 <a href="//www.figma.com/design/ScApgg80Kkhty6ND1t010Q/Analise-Microsite?node-id=0-1&t=3GkybBLYysmSiv0o-1"> Figma Link </a>
-<img src="Screenshot 2024-11-08 at 10.13.36 PM.png">
+<img src="mockup B.png">
 
 </body>
 </html>
