--- a/microsite/initial-build/intro.html
+++ b/microsite/initial-build/intro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Solar System</title>
+    <title>The Solar System - Intro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&family=Tiny5&display=swap" rel="stylesheet">
@@ -17,12 +17,7 @@
     </header>
     <main>
         <h1>The Solar System</h1>
-        <h2><a href="intro.html"> START EXPLORING</a></h2>
-        
     </main>
-    <footer>
-        <p>@2024 Designed by Angela Liu. Direction by Analise Black.</p>
-    </footer>
 </body>
 
 </html>
