--- a/microsite/initial-build/mercury.html
+++ b/microsite/initial-build/mercury.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <title>The Solar System - Intro</title>
+    <title>The Solar System - Mercury</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&family=Tiny5&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/intro.css">
+    <link href="css/mercury.css" rel="stylesheet">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/nav.css">
 </head>
     
 <body>
     <header>
-        <!--Navigation bar-->
+    <!--Navigation bar-->
         <div id="nav-placeholder" style="display: none;">
 
         </div>
@@ -43,12 +43,5 @@
             });
         });
     </script>
-    <!--end of Navigation bar-->
+    <!-- End of Navigation Bar -->
     </header>
-
-    <main>
-        <h1>The Solar System</h1>
-    </main>
-</body>
-
-</html>
