html path fixed

--- a/microsite/final/index.html
+++ b/microsite/final/index.html
@@ -28,7 +28,7 @@
     
     <main>
         <h1>The Solar System</h1>
-        <h2><a href="sun.html" class="blue_btn" id="start_btn"> <img src="../final/pic/pointer_white.svg" id="pointer"> START EXPLORING</a></h2>
+        <h2><a href="sun.html" class="blue_btn" id="start_btn"> <img src="../pic/pointer_white.svg" id="pointer"> START EXPLORING</a></h2>
         
     </main>
     <footer>
