--- a/microsite/final/venus.html
+++ b/microsite/final/venus.html
@@ -38,10 +38,10 @@
 
     <script>
         document.getElementById("prev_btn").onclick = function () {
-        window.location.href = 'Mercury.html';
+        window.location.href = 'mercury.html';
     };
         document.getElementById("nxt_btn").onclick = function () {
-            window.location.href = 'Earth.html';
+            window.location.href = 'earth.html';
         };
     </script>
 </body>
